--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>myweb</title>
@@ -20,10 +18,10 @@
       <div class="menu_nav">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="support.html">Deep Learning</a></li>
+          <li ><a href="support.html">Deep Learning</a></li>
           <li><a href="about.html">Reinforcement learning</a></li>
-          <li><a href="blog.html">Finance</a></li>
-          <li class="active"><a href="contact.html">Contacts</a></li>
+          <li class="active"><a href="blog.html">Finance</a></li>
+          <li ><a href="contact.html">Contacts</a></li>
         </ul>
       </div>
       <div class="clr"></div>
@@ -36,50 +34,15 @@
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2><span>A Blog</span> Entry</h2><div class="clr"></div>
-          <p>Posted by <a href="#">Owner</a>  <span>&nbsp;&bull;&nbsp;</span>  Filed under <a href="#">templates</a>, <a href="#">internet</a></p>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu posuere nunc justo tempus leo. Donec mattis, purus nec placerat bibendum, dui pede condimentum odio, ac blandit ante orci ut diam. Cras fringilla magna. Phasellus suscipit, leo a pharetra condimentum, lorem tellus eleifend magna, eget fringilla velit magna id neque. Curabitur vel urna. In tristique orci porttitor ipsum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu posuere nunc justo tempus leo. </p>
-          <p>Tagged: <a href="#">orci</a>, <a href="#">lectus</a>, <a href="#">varius</a>, <a href="#">turpis</a></p>
-          <p><a href="#"><strong>Comments (3)</strong></a>  <span>&nbsp;&bull;&nbsp;</span>  May 27, 2010  <span>&nbsp;&bull;&nbsp;</span>  <a href="#"><strong>Edit</strong></a></p>
-        </div>
-        <div class="article">
-          <h2><span>3</span> Responses</h2><div class="clr"></div>
-          <div class="comment">
-            <a href="#"><img src="images/userpic.gif" width="40" height="40" alt="user" class="userpic" /></a>
-            <p><a href="#">admin</a> Says:<br />April 20th, 2009 at 2:17 pm</p>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum.</p>
-          </div>
-          <div class="comment">
-            <a href="#"><img src="images/userpic.gif" width="40" height="40" alt="user" class="userpic" /></a>
-            <p><a href="#">Owner</a> Says:<br />April 20th, 2009 at 3:21 pm</p>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu posuere nunc justo tempus leo.</p>
-          </div>
-          <div class="comment">
-            <a href="#"><img src="images/userpic.gif" width="40" height="40" alt="user" class="userpic" /></a>
-            <p><a href="#">admin</a> Says:<br />April 20th, 2009 at 2:17 pm</p>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum.</p>
-          </div>
-        </div>
-        <div class="article">
-          <h2><span>Leave a</span> Reply</h2><div class="clr"></div>
-          <form action="#" method="post" id="leavereply">
-          <ol><li>
-            <label for="name">Name (required)</label>
-            <input id="name" name="name" class="text" />
-          </li><li>
-            <label for="email">Email Address (required)</label>
-            <input id="email" name="email" class="text" />
-          </li><li>
-            <label for="website">Website</label>
-            <input id="website" name="website" class="text" />
-          </li><li>
-            <label for="message">Your Message</label>
-            <textarea id="message" name="message" rows="8" cols="50"></textarea>
-          </li><li>
-            <input type="image" name="imageField" id="imageField" src="images/submit.gif" class="send" />
-            <div class="clr"></div>
-          </li></ol>
-          </form>
+          <h2><span>About</span> About Quantopian</h2><div class="clr"></div>
+          <p>Quantopian is a crowd-sourced quantitative investment firm. We inspire talented people from around the world to write investment algorithms. </p>
+          <p>Quantopian provides capital, education, data, a research environment, and a development platform to algorithm authors (quants). We offer license agreements for algorithms that fit our investment strategy, and the licensing authors are paid based on their strategy's individual performance. We provide everything a quant needs to create a strategy and profit from it. </p>
+          <p><strong>Quantopian websites</strong></p>
+          <p>Some useful websites</p>
+          <ul class="sb_menu">
+            <li><a href="https://www.quantopian.com/"><strong>Quantopian</strong></a></li>
+            <li><a href="https://www.ricequant.com/algorithms"><strong>Ricequant</strong></a></li>
+          </ul>
         </div>
       </div>
       <div class="sidebar">
@@ -139,8 +102,8 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="support.html">Deep Learning</a></li>
           <li><a href="about.html">Reinforcement learning</a></li>
-          <li><a href="blog.html">Finance</a></li>
-        <li class="active"><a href="contact.html">Contacts</a></li>
+          <li class="active"><a href="blog.html">Finance</a></li>
+          <li><a href="contact.html">Contacts</a></li>
       </ul>
       <div class="clr"></div>
     </div>
